# what flags you want to pass to the C compiler & linker
CFLAGS = --pedantic -Wall -std=c99 -O2
AM_LDFLAGS =

# Libraries
LIBS=-lSDL2 -lBox2D

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = iggigame
iggigame_SOURCES = gold-iggi.cpp view/Display.cpp
